# HWPCONV

./: .gitignore  190820 (석간) .hwp 서식 유료 소프트웨어 없이 작성 가능(정보공개정책과)게시.hwp  2026년 제1기 행정안전부 청년인턴 채용 공고(최종).hwpx  251219 (석간) 국내 최초의 사립 수목원 천리포수목원 조성 기록물 안전하게 보존된다(국가기록원 특수기록과).hwpx  HWP2MD.spec  HWP_5.0_File_Format_Spec.md  HWP_PARSER_FIX_PROMPT.md  HWP_Parser_Spec.md  HWP_Table_Image_Parsing_Guide.md  HwpConverterPro.spec  LICENSE  README.md  analyze_ctrl.py  analyze_ctrl11_structure.py  analyze_first_table.py  analyze_tags.py  build.py  cleanup.py  ctrl_analysis.txt  ctrl_debug_full.txt  ctrl_result.txt  debug_log_copy.txt  debug_missing.py  find_ctrl11.py  gui_output.txt  hwp-converter-prd.md  parser_new_methods.py  parser_table_impl.py  pdf_to_image.py  pyproject.toml  quick_pattern.py  quick_test.py  requirements.txt  run_gui.py  solution_hwpx.md  tag_analysis.txt  test_190820.md  test_190820_fixed.md  test_ctrl_detection.py  test_image_position.py  (+8 more)
src/hwpconv/: __init__.py  cli.py  config.py  gui.py  image_analyzer.py  models.py  server.py  utils.py
src/hwpconv/converters/: __init__.py  base.py  html.py  markdown.py
src/hwpconv/parsers/: __init__.py  base.py  hwp.py  hwpx.py
tests/: test_hwp.py  test_hwpx.py
tests/fixtures/: README.md
web/: index.html
