[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwpconv"
version = "0.1.0"
description = "HWP/HWPX → Markdown/HTML 변환기"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Renaissance Law Firm", email = "info@rnlaw.co.kr" }
]
keywords = ["hwp", "hwpx", "markdown", "converter", "한글"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "olefile>=0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
server = [
    "flask>=2.0",
]
vision = [
    "google-generativeai>=0.3.0",
]
all = [
    "flask>=2.0",
    "google-generativeai>=0.3.0",
]

[project.scripts]
hwpconv = "hwpconv.cli:main"
hwpconv-gui = "hwpconv.gui:main"
hwpconv-server = "hwpconv.server:main"

[project.urls]
Homepage = "https://github.com/rnlaw/hwpconv"

[tool.hatch.build.targets.wheel]
packages = ["src/hwpconv"]
